apps/vaultwarden/networkpolicy/cilium-networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: vaultwarden
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: traefik
      toPorts:
        - ports:
            - { port: "80", protocol: TCP }
            - { port: "3012", protocol: TCP }
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: vaultwarden
      toPorts:
        - ports:
            - { port: "80", protocol: TCP }
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - { port: "80", protocol: TCP }
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - { port: "53", protocol: UDP }
            - { port: "53", protocol: TCP }
    # SMTP for invite/notification email
    - toCIDR: ["0.0.0.0/0"]
      toPorts:
        - ports:
            - { port: "587", protocol: TCP }
            - { port: "465", protocol: TCP }
